fix overflow on screens < 460px styles.css

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -105,7 +105,7 @@ section {
 /* Media Queries  */
 
 @media screen and (max-width: 885px) {
-    html {
+    body {
     background-image: linear-gradient(to bottom, #acc5ac, #fff);
     }
 
